all content is done for thoughts on building a farcaster client
just need to add og image then a small touch up(non article related) then can merge with main and publish

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::marker{
+    padding: 0 !important; 
+    margin: 0 !important;
+} 
+
+/* ul > li{
+    position: relative;
+    height: auto;
+    min-height: 15px;
+    max-height: 168px;
+} */
+
+hr{
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+    max-width: 99%;
+    height: 2px;
+    color: inherit;
+    border-color: #adadad;
+    border-top-width: 0.5px;
+}
